# auto-esp32s3-all

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  CONFIG_DEVELOPER_GUIDE.md  CONFIG_USER_GUIDE.md  FIXES_APPLIED.md  README.md  README_MULTI_DEVICE.md  REVIEW_SUMMARY.md  partitions.csv
.github/agents/: esp32s3-c.agent.md
main/: CMakeLists.txt  app_config.c  app_config.h  commands.c  commands.h  config.c  config.h  core.c  core.h  gm861s_reader.c  gm861s_reader.h  idf_component.yml  led_status.c  led_status.h  main.c  mqtt_manager.c  mqtt_manager.h  ota_manager.c  ota_manager.h  rc522_reader.c  rc522_reader.h  wifi_manager.c  wifi_manager.h
